@@ -31,4 +31,4 @@ Test::Deep          = 0
 DBD::SQLite         = 0
 Test::Exception     = 0
 parent              = 0
-; String::CamelCase = 0
+String::CamelCase   = 0
